# pyCUFSM

./: .readthedocs.yaml  .style.yapf  PreProcess.ipynb  PreProcess.py  README.md  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Validation.ipynb  _custom_build.py  build_cython_ext.py  crossect.py  cutwp_prop2.py  dev_requirements.txt  dispshap.py  doc_requirements.txt  example3.py  example4.py  example_1.py  example_2.py  ipywidgets.py  jupyter_requirements.txt  plot_requirements.txt  pyCUFSM.ipynb  pyCUFSM_Jupyter.ipynb  pyCUFSM_load_mat.ipynb  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  thecurve3.py  window.py
.github/: dependabot.yml
.github/workflows/: greetings.yml  pythonpackage.yml  release.yaml  test.yaml
GUI/CUTWP/: cutwp_test.py
Jupyter_Notebooks/: PreProcess.py  Validation.ipynb  pyCUFSM.ipynb  pyCUFSM_GUI.ipynb  pyCUFSM_load_mat.ipynb
docs/: conf.py
docs/source/: conf.py  index.rst  usage.rst
pyCUFSM/: .pylintrc  .style.yapf  analysis.py  cfsm.py  fsm.py  helpers.py  preprocess.py
pycufsm/: __init__.py  _version.py  analysis.py  analysis_c.pyx  analysis_p.py  cfsm.py  cutwp.py  cutwp_prop2.py  fsm.py  helpers.py  plotters.py  preprocess.py  types.py
pycufsm/Jupyter_Notebooks/: Validation.ipynb  gui_widgets.py  ipywidgets.py  pyCUFSM.ipynb  pyCUFSM_GUI.ipynb  pyCUFSM_load_mat.ipynb
pycufsm/examples/: example_1.py  example_1_new.py  example_2.py
tests/: test_e2e.py  utils.py
tests/fixtures/: e2e_fixtures.py
tests/mat_files/: anolip_Mxr.mat  cwlip_Mx.mat  cwlip_P.mat  cwlip_modified_Mx.mat  cwlip_modified_P.mat  rack_Mx.mat  rack_Mz.mat  rack_P.mat  zwlip_Mxr.mat  zwlip_P.mat
