[build-system]
requires = ["setuptools>=61.0", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pycufsm"
authors = [{ name = "Brooks Smith", email = "smith120bh@gmail.com" }]
description = "Python CUFSM (Constrained and Unconstrained Finite Strip Method)"
requires-python = ">=3.8"
keywords = [
    "CUFSM",
    "CFS",
    "thin-walled",
    "cold-formed steel",
    "aluminium",
    "structural engineering",
    "structural analysis",
]
license = { text = "AFL-3.0" }
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Academic Free License (AFL)",
]
dynamic = ["version", "readme", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
version = { attr = "pycufsm._version.__version__" }
readme = { file = ["README.md"] }
dependencies = { file = "requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
plot = { file = "plot_requirements.txt" }
test = { file = "test_requirements.txt" }
dev = { file = "dev_requirements.txt" }
jupyter = { file = "jupyter_requirements.txt" }
doc = { file = "doc_requirements.txt" }

[project.urls]
"Homepage" = "https://github.com/ClearCalcs/pyCUFSM"
"Documentation" = "https://pycufsm.readthedocs.io"

[tool.setuptools]
packages = ["pycufsm"]
py-modules = ["_custom_build"]

[tool.setuptools.package-data]
pycufsm = ["py.typed"]

[tool.setuptools.cmdclass]
build_py = "_custom_build.build_py"

[tool.pylint]
disable = [
    "too-many-locals",
    "too-many-arguments",
    "too-many-statements",
    "too-many-branches",
    "too-many-nested-blocks",
    "duplicate-code",
    "missing-module-docstring",
    "too-many-lines",
    "logging-fstring-interpolation",
]
max-line-length = 120
py-version = 3.8

[tool.mypy]
packages = "pycufsm"
python_version = "3.8"
strict = true
allow_any_generics = true
implicit_reexport = true
exclude = ['gui_widgets\.py']


[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
