[build-system]
requires = [
    "poetry-core>=1.2.0",
    "setuptools>=61.0",
    "cython>=3.0",
    "numpy>=2.0.0rc1",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pycufsm"
version = "0.1.4"
authors = ["Brooks Smith <smith120bh@gmail.com>"]
description = "Python CUFSM (Constrained and Unconstrained Finite Strip Method)"
keywords = [
    "FSM",
    "finite strip",
    "CUFSM",
    "CFS",
    "thin-walled",
    "cold-formed steel",
    "aluminium",
    "structural engineering",
    "structural analysis",
]
license = "AFL-3.0"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Academic Free License (AFL)",
]
readme = "README.md"
homepage = "https://github.com/ClearCalcs/pyCUFSM"
repository = "https://github.com/ClearCalcs/pyCUFSM"
documentation = "https://pycufsm.readthedocs.io"
packages = [{ include = "pycufsm" }]
include = ["py.typed", "*.pyx"]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=1.23.5"
scipy = ">=1.10.0"
ipywidgets = { version = ">=8.0.0", optional = true }
matplotlib = { version = ">=3.2", optional = true }

[tool.poetry.group.dev.dependencies]
numpy = "==2.0.0"
scipy = "==1.14.0"
matplotlib = "==3.9.1"
typing_extensions = "==4.12.2"
ipywidgets = "==8.1.3"

[tool.poetry.group.test.dependencies]
pylint = "==3.2.5"
mypy = "==1.10.1"
black = { version = "==24.4.2", extras = ["jupyter"] }
pytest = "==8.2.2"
pytest-describe = "==2.2.0"
pytest-pspec = "==0.0.4"
pytest-raises = "==0.11"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "==7.4.6"
sphinx_autoapi = "==3.1.2"

[tool.poetry.extras]
plot = ["matplotlib"]
jupyter = ["ipywidgets", "matplotlib"]

[tool.poetry.build]
script = "build_cython_ext.py"
generate-setup-file = true

[tool.pylint]
disable = [
    "too-many-locals",
    "too-many-arguments",
    "too-many-statements",
    "too-many-branches",
    "too-many-nested-blocks",
    "duplicate-code",
    "missing-module-docstring",
    "too-many-lines",
    "logging-fstring-interpolation",
]
variable-rgx = '[a-zA-Z_][a-zA-Z0-9_]{2,30}$'
argument-rgx = '[a-zA-Z_][a-zA-Z0-9_]{2,30}$'
function-rgx = '[a-zA-Z_][a-zA-Z0-9_]{2,30}$'
max-line-length = 120
py-version = 3.8

[tool.mypy]
packages = "pycufsm"
python_version = "3.10"
strict = true
allow_any_generics = true
implicit_reexport = true
exclude = ['gui_widgets\.py']

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
